src/test/ui/feature-gates/feature-gate-cfg-target-has-atomic.stderr
error[E0658]: `cfg(target_has_atomic_load_store)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:2:10
   |
LL |     cfg!(target_has_atomic_load_store = "8");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #94039 <https://github.com/rust-lang/rust/issues/94039> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic_load_store)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:4:10
   |
LL |     cfg!(target_has_atomic_load_store = "16");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #94039 <https://github.com/rust-lang/rust/issues/94039> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic_load_store)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:6:10
   |
LL |     cfg!(target_has_atomic_load_store = "32");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #94039 <https://github.com/rust-lang/rust/issues/94039> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic_load_store)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:8:10
   |
LL |     cfg!(target_has_atomic_load_store = "64");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #94039 <https://github.com/rust-lang/rust/issues/94039> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic_load_store)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:10:10
   |
LL |     cfg!(target_has_atomic_load_store = "128");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #94039 <https://github.com/rust-lang/rust/issues/94039> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic_load_store)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:12:10
   |
LL |     cfg!(target_has_atomic_load_store = "ptr");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #94039 <https://github.com/rust-lang/rust/issues/94039> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
